# Sam2Onnx_Inference

./: CMakeLists.txt  README.md
include/: Model.h  Sam2.h  utils.h  yolov8Predictor.h
models/: model.txt
src/: Sam2.cpp  main.cpp  utils.cpp  yolov8Predictor.cpp
